--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
 </div>
 <div class="step-item" style="display: block;">
 <div class="question-title ">
-We go out to homes at night for hours, everywhere in the city. Do you want to see my catalog?.</div>
+Salimos a domimicilio por noches por horas, a todos lados de la ciudad quieres ver mi catalogo?.</div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
-Yes
+Si
 </div>
 <div class="step-btn yes-btn tr-next-button tr-b-option">
 No
@@ -36,7 +36,7 @@ No
 </div>
 <div class="step-item" style="display: none;">
 <div class="question-title ">
-Are you at least 18 years old? We are a club of Companion Ladies, Press YES and watch us live Naked..
+Tienes al menos 20 años? Nosotras somos un club de Damas de Compañia, Presiona SI y miranos en vivo Desnudas..
 </div>
 <div class="buttons-block">
 <div class="step-btn no-btn tr-next-button tr-b-option">
